# racer_ws

./: 2026-05-02-uav-tf-frontier-debug-report.md  gazebo_phase1_work_record.md  phase1_work_report.md  plan.md
devel/: .catkin  .rosinstall
devel/include/bspline/: Bspline.h
devel/include/exploration_manager/: DroneState.h  GridTour.h  HGrid.h  PairOpt.h  PairOptResponse.h
devel/include/lkh_mtsp_solver/: SolveMTSPRequest.h  SolveMTSPResponse.h
devel/include/lkh_tsp_solver/: SolveTSPRequest.h  SolveTSPResponse.h
devel/include/plan_env/: ChunkData.h  ChunkStamps.h  IdxList.h
devel/lib/exploration_manager/: exploration_node  ground_node
devel/lib/gazebo_map_generator/: random_obstacle
devel/lib/lkh_mtsp_solver/: mtsp_node
devel/lib/local_sensing_node/: pcl_render_node
devel/lib/map_generator/: click_map  map_pub  map_recorder  pilar_map
devel/lib/multi_map_server/: multi_map_visualization
devel/lib/odom_visualization/: odom_visualization
devel/lib/pkgconfig/: active_perception.pc  bspline.pc  bspline_opt.pc  cmake_utils.pc  exploration_manager.pc  fuae_gazebo.pc  gazebo_map_generator.pc  lkh_mtsp_solver.pc  lkh_tsp_solver.pc  local_sensing_node.pc  map_generator.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  multi_map_server.pc  odom_visualization.pc  path_searching.pc  (+20 more)
src/RACER/swarm_exploration/exploration_manager/: CMakeLists.txt  package.xml
src/RACER/swarm_exploration/exploration_manager/config/: swarm.rviz
src/RACER/swarm_exploration/exploration_manager/include/exploration_manager/: expl_data.h
src/RACER/swarm_exploration/exploration_manager/launch/: env_simulation.launch  gazebo_phase1.launch  rviz.launch  searchmap1.launch  single_drone_exploration.xml  single_drone_planner.xml  uav_exploration  uav_exploration.launch  uav_racer_simulation.launch  uav_simulation.launch
src/RACER/swarm_exploration/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp
(+98 files in other folders)
